feat(KSTIP-1494): specific return types